cb_bsdl_parser/CBBsdlParser.py
# Generated from CBBsdl.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CBBsdlParser ( Parser ):

    grammarFileName = "CBBsdl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'entity'", "'end'", "'is'", "'generic'", 
                     "'string'", "'PHYSICAL_PIN_MAP'", "'attribute'", "'INSTRUCTION_LENGTH'", 
                     "'INSTRUCTION_OPCODE'", "'BOUNDARY_LENGTH'", "'BOUNDARY_REGISTER'", 
                     "'of'", "'use'", "'constant'", "'PIN_MAP_STRING'", 
                     "'port'", "'inout'", "'in'", "'out'", "'linkage'", 
                     "'bit'", "'bit_vector'", "'to'", "'downto'", "'.'", 
                     "','", "':'", "';'", "'('", "')'", "'&'", "'\"'", "':='", 
                     "'*'", "'_'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "ENTITY", "END", "IS", "GENERIC", "STRING", 
                      "PHYSICAL_PIN_MAP", "ATTRIBUTE", "INSTR_LEN", "INSTR_OPCODE", 
                      "BS_LEN", "BS_REG", "OF", "USE", "CONSTANT", "PIN_MAP_STRING", 
                      "PORT", "INOUT", "IN", "OUT", "LINKAGE", "BIT", "BIT_VECTOR", 
                      "TO", "DOWNTO", "DOT", "COMMA", "COLON", "SEMICOLON", 
                      "BRACKET_OPEN", "BRACKET_CLOSE", "AMPERSAND", "QUOTES", 
                      "EQUALS", "ASTERISK", "UNDERLINE", "SQUARE_OPEN", 
                      "SQUARE_CLOSE", "ID", "REAL_LITERAL", "INTEGER", "DIGIT", 
                      "EXPONENT", "WS", "COMMENT" ]

    RULE_bsdl = 0
    RULE_entity = 1
    RULE_entity_name = 2
    RULE_body = 3
    RULE_generic_phys_pin_map = 4
    RULE_phys_pin_map_name = 5
    RULE_attr_instr_len = 6
    RULE_instr_len = 7
    RULE_attr_instr_opcode = 8
    RULE_opcode_def = 9
    RULE_opcode_name = 10
    RULE_opcode_val = 11
    RULE_attr_bsr_len = 12
    RULE_bsr_len = 13
    RULE_port_dec = 14
    RULE_port_def = 15
    RULE_port_name = 16
    RULE_port_function = 17
    RULE_port_type = 18
    RULE_bit = 19
    RULE_bit_vector = 20
    RULE_pin_map = 21
    RULE_pin_def = 22
    RULE_pin_num = 23
    RULE_pin_num_arr = 24
    RULE_attr_bsr = 25
    RULE_bsr_def = 26
    RULE_cell_num = 27
    RULE_bsr_cell0 = 28
    RULE_bsr_cell1 = 29
    RULE_cell_type = 30
    RULE_cell_port_name = 31
    RULE_cell_func = 32
    RULE_cell_safe = 33
    RULE_cell_ccell = 34
    RULE_cell_disval = 35
    RULE_bit_range = 36
    RULE_undef_part = 37
    RULE_number = 38
    RULE_identifier = 39
    RULE_comment = 40

    ruleNames =  [ "bsdl", "entity", "entity_name", "body", "generic_phys_pin_map", 
                   "phys_pin_map_name", "attr_instr_len", "instr_len", "attr_instr_opcode", 
                   "opcode_def", "opcode_name", "opcode_val", "attr_bsr_len", 
                   "bsr_len", "port_dec", "port_def", "port_name", "port_function", 
                   "port_type", "bit", "bit_vector", "pin_map", "pin_def", 
                   "pin_num", "pin_num_arr", "attr_bsr", "bsr_def", "cell_num", 
                   "bsr_cell0", "bsr_cell1", "cell_type", "cell_port_name", 
                   "cell_func", "cell_safe", "cell_ccell", "cell_disval", 
                   "bit_range", "undef_part", "number", "identifier", "comment" ]

    EOF = Token.EOF
    ENTITY=1
    END=2
    IS=3
    GENERIC=4
    STRING=5
    PHYSICAL_PIN_MAP=6
    ATTRIBUTE=7
    INSTR_LEN=8
    INSTR_OPCODE=9
    BS_LEN=10
    BS_REG=11
    OF=12
    USE=13
    CONSTANT=14
    PIN_MAP_STRING=15
    PORT=16
    INOUT=17
    IN=18
    OUT=19
    LINKAGE=20
    BIT=21
    BIT_VECTOR=22
    TO=23
    DOWNTO=24
    DOT=25
    COMMA=26
    COLON=27
    SEMICOLON=28
    BRACKET_OPEN=29
    BRACKET_CLOSE=30
    AMPERSAND=31
    QUOTES=32
    EQUALS=33
    ASTERISK=34
    UNDERLINE=35
    SQUARE_OPEN=36
    SQUARE_CLOSE=37
    ID=38
    REAL_LITERAL=39
    INTEGER=40
    DIGIT=41
    EXPONENT=42
    WS=43
    COMMENT=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class BsdlContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def entity(self):
            return self.getTypedRuleContext(CBBsdlParser.EntityContext,0)


        def comment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CBBsdlParser.CommentContext)
            else:
                return self.getTypedRuleContext(CBBsdlParser.CommentContext,i)


        def getRuleIndex(self):
            return CBBsdlParser.RULE_bsdl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBsdl" ):
                listener.enterBsdl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBsdl" ):
                listener.exitBsdl(self)




    def bsdl(self):

        localctx = CBBsdlParser.BsdlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_bsdl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.entity()
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==44:
                self.state = 83
                self.comment()
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntityContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENTITY(self):
            return self.getToken(CBBsdlParser.ENTITY, 0)

        def entity_name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CBBsdlParser.Entity_nameContext)
            else:
                return self.getTypedRuleContext(CBBsdlParser.Entity_nameContext,i)


        def IS(self):
            return self.getToken(CBBsdlParser.IS, 0)

        def body(self):
            return self.getTypedRuleContext(CBBsdlParser.BodyContext,0)


        def END(self):
            return self.getToken(CBBsdlParser.END, 0)

        def SEMICOLON(self):
            return self.getToken(CBBsdlParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return CBBsdlParser.RULE_entity

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntity" ):
                listener.enterEntity(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntity" ):
                listener.exitEntity(self)




    def entity(self):

        localctx = CBBsdlParser.EntityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_entity)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(CBBsdlParser.ENTITY)
            self.state = 90
            self.entity_name()
            self.state = 91
            self.match(CBBsdlParser.IS)
            self.state = 92
            self.body()
            self.state = 93
            self.match(CBBsdlParser.END)
            self.state = 94
            self.entity_name()
            self.state = 95
            self.match(CBBsdlParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Entity_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(CBBsdlParser.IdentifierContext,0)


        def getRuleIndex(self):
            return CBBsdlParser.RULE_entity_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntity_name" ):
                listener.enterEntity_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntity_name" ):
                listener.exitEntity_name(self)




    def entity_name(self):

        localctx = CBBsdlParser.Entity_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_entity_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def generic_phys_pin_map(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CBBsdlParser.Generic_phys_pin_mapContext)
            else:
                return self.getTypedRuleContext(CBBsdlParser.Generic_phys_pin_mapContext,i)


        def port_dec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CBBsdlParser.Port_decContext)
            else:
                return self.getTypedRuleContext(CBBsdlParser.Port_decContext,i)


        def pin_map(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CBBsdlParser.Pin_mapContext)
            else:
                return self.getTypedRuleContext(CBBsdlParser.Pin_mapContext,i)


        def attr_instr_len(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CBBsdlParser.Attr_instr_lenContext)
            else:
                return self.getTypedRuleContext(CBBsdlParser.Attr_instr_lenContext,i)


        def attr_instr_opcode(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CBBsdlParser.Attr_instr_opcodeContext)
            else:
                return self.getTypedRuleContext(CBBsdlParser.Attr_instr_opcodeContext,i)


        def attr_bsr_len(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CBBsdlParser.Attr_bsr_lenContext)
            else:
                return self.getTypedRuleContext(CBBsdlParser.Attr_bsr_lenContext,i)


        def attr_bsr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CBBsdlParser.Attr_bsrContext)
            else:
                return self.getTypedRuleContext(CBBsdlParser.Attr_bsrContext,i)


        def undef_part(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CBBsdlParser.Undef_partContext)
            else:
                return self.getTypedRuleContext(CBBsdlParser.Undef_partContext,i)


        def getRuleIndex(self):
            return CBBsdlParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)




    def body(self):

        localctx = CBBsdlParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 107
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                    if la_ == 1:
                        self.state = 99
                        self.generic_phys_pin_map()
                        pass

                    elif la_ == 2:
                        self.state = 100
                        self.port_dec()
                        pass

                    elif la_ == 3:
                        self.state = 101
                        self.pin_map()
                        pass

                    elif la_ == 4:
                        self.state = 102
                        self.attr_instr_len()
                        pass

                    elif la_ == 5:
                        self.state = 103
                        self.attr_instr_opcode()
                        pass

                    elif la_ == 6:
                        self.state = 104
                        self.attr_bsr_len()
                        pass

                    elif la_ == 7:
                        self.state = 105
                        self.attr_bsr()
                        pass

                    elif la_ == 8:
                        self.state = 106
                        self.undef_part()
                        pass

             
                self.state = 113
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Generic_phys_pin_mapContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GENERIC(self):
            return self.getToken(CBBsdlParser.GENERIC, 0)

        def BRACKET_OPEN(self):
            return self.getToken(CBBsdlParser.BRACKET_OPEN, 0)

        def PHYSICAL_PIN_MAP(self):
            return self.getToken(CBBsdlParser.PHYSICAL_PIN_MAP, 0)

        def COLON(self):
            return self.getToken(CBBsdlParser.COLON, 0)

        def STRING(self):
            return self.getToken(CBBsdlParser.STRING, 0)

        def EQUALS(self):
            return self.getToken(CBBsdlParser.EQUALS, 0)

        def QUOTES(self, i:int=None):
            if i is None:
                return self.getTokens(CBBsdlParser.QUOTES)
            else:
                return self.getToken(CBBsdlParser.QUOTES, i)

        def phys_pin_map_name(self):
            return self.getTypedRuleContext(CBBsdlParser.Phys_pin_map_nameContext,0)


        def BRACKET_CLOSE(self):
            return self.getToken(CBBsdlParser.BRACKET_CLOSE, 0)

        def SEMICOLON(self):
            return self.getToken(CBBsdlParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return CBBsdlParser.RULE_generic_phys_pin_map

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGeneric_phys_pin_map" ):
                listener.enterGeneric_phys_pin_map(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGeneric_phys_pin_map" ):
                listener.exitGeneric_phys_pin_map(self)




    def generic_phys_pin_map(self):

        localctx = CBBsdlParser.Generic_phys_pin_mapContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_generic_phys_pin_map)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(CBBsdlParser.GENERIC)
            self.state = 115
            self.match(CBBsdlParser.BRACKET_OPEN)
            self.state = 116
            self.match(CBBsdlParser.PHYSICAL_PIN_MAP)
            self.state = 117
            self.match(CBBsdlParser.COLON)
            self.state = 118
            self.match(CBBsdlParser.STRING)
            self.state = 119
            self.match(CBBsdlParser.EQUALS)
            self.state = 120
            self.match(CBBsdlParser.QUOTES)
            self.state = 121
            self.phys_pin_map_name()
            self.state = 122
            self.match(CBBsdlParser.QUOTES)
            self.state = 123
            self.match(CBBsdlParser.BRACKET_CLOSE)
            self.state = 124
            self.match(CBBsdlParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Phys_pin_map_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(CBBsdlParser.IdentifierContext,0)


        def getRuleIndex(self):
            return CBBsdlParser.RULE_phys_pin_map_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPhys_pin_map_name" ):
                listener.enterPhys_pin_map_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPhys_pin_map_name" ):
                listener.exitPhys_pin_map_name(self)




    def phys_pin_map_name(self):

        localctx = CBBsdlParser.Phys_pin_map_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_phys_pin_map_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr_instr_lenContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ATTRIBUTE(self):
            return self.getToken(CBBsdlParser.ATTRIBUTE, 0)

        def INSTR_LEN(self):
            return self.getToken(CBBsdlParser.INSTR_LEN, 0)

        def OF(self):
            return self.getToken(CBBsdlParser.OF, 0)

        def entity_name(self):
            return self.getTypedRuleContext(CBBsdlParser.Entity_nameContext,0)


        def COLON(self):
            return self.getToken(CBBsdlParser.COLON, 0)

        def ENTITY(self):
            return self.getToken(CBBsdlParser.ENTITY, 0)

        def IS(self):
            return self.getToken(CBBsdlParser.IS, 0)

        def instr_len(self):
            return self.getTypedRuleContext(CBBsdlParser.Instr_lenContext,0)


        def SEMICOLON(self):
            return self.getToken(CBBsdlParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return CBBsdlParser.RULE_attr_instr_len

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttr_instr_len" ):
                listener.enterAttr_instr_len(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttr_instr_len" ):
                listener.exitAttr_instr_len(self)




    def attr_instr_len(self):

        localctx = CBBsdlParser.Attr_instr_lenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_attr_instr_len)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(CBBsdlParser.ATTRIBUTE)
            self.state = 129
            self.match(CBBsdlParser.INSTR_LEN)
            self.state = 130
            self.match(CBBsdlParser.OF)
            self.state = 131
            self.entity_name()
            self.state = 132
            self.match(CBBsdlParser.COLON)
            self.state = 133
            self.match(CBBsdlParser.ENTITY)
            self.state = 134
            self.match(CBBsdlParser.IS)
            self.state = 135
            self.instr_len()
            self.state = 136
            self.match(CBBsdlParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Instr_lenContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def number(self):
            return self.getTypedRuleContext(CBBsdlParser.NumberContext,0)


        def getRuleIndex(self):
            return CBBsdlParser.RULE_instr_len

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstr_len" ):
                listener.enterInstr_len(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstr_len" ):
                listener.exitInstr_len(self)




    def instr_len(self):

        localctx = CBBsdlParser.Instr_lenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_instr_len)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.number()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr_instr_opcodeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ATTRIBUTE(self):
            return self.getToken(CBBsdlParser.ATTRIBUTE, 0)

        def INSTR_OPCODE(self):
            return self.getToken(CBBsdlParser.INSTR_OPCODE, 0)

        def OF(self):
            return self.getToken(CBBsdlParser.OF, 0)

        def entity_name(self):
            return self.getTypedRuleContext(CBBsdlParser.Entity_nameContext,0)


        def COLON(self):
            return self.getToken(CBBsdlParser.COLON, 0)

        def ENTITY(self):
            return self.getToken(CBBsdlParser.ENTITY, 0)

        def IS(self):
            return self.getToken(CBBsdlParser.IS, 0)

        def SEMICOLON(self):
            return self.getToken(CBBsdlParser.SEMICOLON, 0)

        def opcode_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CBBsdlParser.Opcode_defContext)
            else:
                return self.getTypedRuleContext(CBBsdlParser.Opcode_defContext,i)


        def getRuleIndex(self):
            return CBBsdlParser.RULE_attr_instr_opcode

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttr_instr_opcode" ):
                listener.enterAttr_instr_opcode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttr_instr_opcode" ):
                listener.exitAttr_instr_opcode(self)




    def attr_instr_opcode(self):

        localctx = CBBsdlParser.Attr_instr_opcodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_attr_instr_opcode)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(CBBsdlParser.ATTRIBUTE)
            self.state = 141
            self.match(CBBsdlParser.INSTR_OPCODE)
            self.state = 142
            self.match(CBBsdlParser.OF)
            self.state = 143
            self.entity_name()
            self.state = 144
            self.match(CBBsdlParser.COLON)
            self.state = 145
            self.match(CBBsdlParser.ENTITY)
            self.state = 146
            self.match(CBBsdlParser.IS)
            self.state = 148 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 147
                self.opcode_def()
                self.state = 150 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==32):
                    break

            self.state = 152
            self.match(CBBsdlParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Opcode_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUOTES(self, i:int=None):
            if i is None:
                return self.getTokens(CBBsdlParser.QUOTES)
            else:
                return self.getToken(CBBsdlParser.QUOTES, i)

        def opcode_name(self):
            return self.getTypedRuleContext(CBBsdlParser.Opcode_nameContext,0)


        def BRACKET_OPEN(self):
            return self.getToken(CBBsdlParser.BRACKET_OPEN, 0)

        def BRACKET_CLOSE(self):
            return self.getToken(CBBsdlParser.BRACKET_CLOSE, 0)

        def opcode_val(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CBBsdlParser.Opcode_valContext)
            else:
                return self.getTypedRuleContext(CBBsdlParser.Opcode_valContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CBBsdlParser.COMMA)
            else:
                return self.getToken(CBBsdlParser.COMMA, i)

        def AMPERSAND(self):
            return self.getToken(CBBsdlParser.AMPERSAND, 0)

        def getRuleIndex(self):
            return CBBsdlParser.RULE_opcode_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpcode_def" ):
                listener.enterOpcode_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpcode_def" ):
                listener.exitOpcode_def(self)




    def opcode_def(self):

        localctx = CBBsdlParser.Opcode_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_opcode_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(CBBsdlParser.QUOTES)
            self.state = 155
            self.opcode_name()
            self.state = 156
            self.match(CBBsdlParser.BRACKET_OPEN)
            self.state = 161 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 157
                self.opcode_val()
                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==26:
                    self.state = 158
                    self.match(CBBsdlParser.COMMA)


                self.state = 163 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==40):
                    break

            self.state = 165
            self.match(CBBsdlParser.BRACKET_CLOSE)
            self.state = 167
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==26:
                self.state = 166
                self.match(CBBsdlParser.COMMA)


            self.state = 169
            self.match(CBBsdlParser.QUOTES)
            self.state = 171
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==31:
                self.state = 170
                self.match(CBBsdlParser.AMPERSAND)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Opcode_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(CBBsdlParser.IdentifierContext,0)


        def getRuleIndex(self):
            return CBBsdlParser.RULE_opcode_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpcode_name" ):
                listener.enterOpcode_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpcode_name" ):
                listener.exitOpcode_name(self)




    def opcode_name(self):

        localctx = CBBsdlParser.Opcode_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_opcode_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Opcode_valContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(CBBsdlParser.INTEGER, 0)

        def getRuleIndex(self):
            return CBBsdlParser.RULE_opcode_val

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpcode_val" ):
                listener.enterOpcode_val(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpcode_val" ):
                listener.exitOpcode_val(self)




    def opcode_val(self):
